# MIOTI_DS_ProyectoFinal

./: .gitignore  .pre-commit-config.yaml  .template.env  README.md  pyproject.toml  test.py
Data/: correlated_pairs.csv
scripts/: data_analysis.ipynb  metrics.ipynb  test_forms.ipynb
utils/: common.py  data_clean.py  transform.py
